# search_engine_proj

./: CMakeLists.txt  README.md
JSON/: requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
res/: file001.txt  file004.txt
resources/: file002.txt  file003.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
test/: CMakeLists.txt  ConverterJSON_test.cpp
